# obs-studio

plugins/: CMakeLists.txt
plugins/obs-shaderfilter/: CMakeLists.txt
plugins/obs-shaderfilter/data/examples/: selective_color.shader
plugins/obs-shaderfilter/data/locale/: en-US.ini
plugins/obs-shaderfilter/src/: obs-shaderfilter.c
